--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.rtl.min.css"
         integrity="sha384-CfCrinSRH2IR6a4e6fy2q6ioOX7O6Mtm1L9vRvFZ1trBncWmMePhzvafv7oIcWiW" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="clases.css">
 
     <title>scroll web</title>
 </head>
@@ -21,7 +23,12 @@
         <!--navbar-expand-lg:hace al nabar responive, el menu se muestra colapsado pasand a una hamburguesa en pantallas menores a lg. desde lg en adelante, se muestraa expandido; fixed-top: la navbar queda fija arriba al hacer scroll -->
         <div class="container-fluid">
             <!--container-fluid: contenedor a ancho completo, a diferencia de container que tiene max-width y va centrado-->
-            <a class="navbar-brand" href="/">Reinicio</a>
+            <a class="navbar-brand d-flex align-items-center gap-2" href="/">
+                <!--d-flex:Pone el logo y el texto en una misma línea y evita que el logo se vaya arriba y el texto abajo; align-items-center: Propiedad de Flexbox--Logo y texto quedan alineados verticalmente y Sin esto, el texto suele quedar más abajo que la imagen; gap-2: Aplica un espacio horizontal entre los hijos del flex y Mantiene espaciado consistente y responsive  -->
+                <img src="assets/logo-reinicio1.png" alt="logo-reinicio1" class="logo-navbar">
+                <span>
+                    Reinico
+                </span></a>
             <!--navbar-brand: Estilo de marca (logo/nombre del sitio) tipografí un poco más grande, alineacón correcta dentro del navbar; href="/" te lleva a la raíz del sitio (home)-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -45,7 +52,7 @@
 
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#servicios">Servicios</a>
+                        <a class="nav-link" href="#Servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#comentarios">
@@ -66,22 +73,89 @@
         </div>
     </nav>
 
-    <!--Slider-->
+    <!--Carrusel-->
     <section id="inicio">
         <div class="carousel slide" id="carouselExample" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-bs-target="#carouselExample" data-bs-slide-to="0" class="active"></li>
+                <li data-bs-target="#carouselExample" data-bs-slide-to="1"></li>
+                <li data-bs-target="#carouselExample" data-bs-slide-to="2"></li>
+            </ol>
+
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="assets/Gemini_Generated_Image_f3wbuof3wbuof3wb.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Playa blanco y negro</h5>
+                        <p>ڤنتاي يڠ اينده دالم ورنا هيتم ڤوتيه</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="assets/Gemini_Generated_Image_r4gmyjr4gmyjr4gm.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Puente de Broklyn</h5>
+                        <p>Фотография Бруклинского моста на фоне Нью-Йорка.</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="assets/Gemini_Generated_Image_rqquirrqquirrqqu.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Ciudad de Salzburgo, Austria</h5>
+                        <p>歴史的中心部を支配するホーエンザルツブルク城。</p>
+                    </div>
                 </div>
             </div>
+
+            <a class="carousel-control-prev" href="#carouselExample" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExample" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </a>
         </div>
     </section>
+
+    <!--Servicios -->
+
+    <main class="bg-dark text-white py-5" id="Servicios">
+        <div class="container">
+            <div class="text-center py-5 text-primary">
+                <i class="bi bi-newspaper h4 text-danger"></i>
+                <i class="bi bi-newspaper h4"></i>
+                <i class="bi bi-newspaper h4"></i>
+            </div>
+            <h2 class="text-center display-4 mb-4">Servicios</h2>
+            <!--display-4: Texto muy grande, peso ligero y altura compacta-->
+
+            <div class="row align-items-center">
+                <div class="col-12 col-lg-3">
+                    <h5>studyoya wênekêşiya peyzajê</h5>
+                    <hr>
+                    <p>
+                        लोरेम इप्सम डोलोर बैठो अमेट कन्सेक्टेतुर एडिपिसिसिंग एलिट। सेड ओमनिस डोलोरेस वोलुप्टेट,
+                        रेकुसेंडे उदे कर्ज nesciunt ईओएस
+                        वोलुप्टाटिबस eventiet, त्रुटि टेम्पोरा। सुख कृपया excepturi त्रुटि को भगा दे। इन्हें चुनना दर्द
+                        है।
+                    </p>
+                    <button class="btn btn-outline-light mb-5 mb-lg-0">
+                        Cotiza nuestros servicios
+                    </button>
+                </div>
+                <div class="col-12 col-lg-9">
+                    <div class="img-wrapper">
+                        <img class="img-fluid rounded img-ajustada" src="assets/el-faro.jpg" alt="Imagen">
+                    </div>
+                </div>
+            </div>
+            <h1 class="py-5 display-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque ea, inventore
+                quam aperiam
+                aut iure deserunt facere recusandae. Ut nihil nostrum mollitia. Iusto similique explicabo quae eius
+                quisquam distinctio nihil.</h1>
+        </div>
+
+    </main>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
