--- a/index.html
+++ b/index.html
@@ -157,6 +157,26 @@
 
     </main>
 
+
+    <!--Comentarios-->
+    <section id="Comentarios" class="py-5 bg-light">
+        <div class="container">
+            <div class="text-center py-5 h1">
+                <i class="bi bi-body-text"></i>
+                <i class="bi bi-body-text"></i>
+                <i class="bi bi-body-text"></i>
+            </div>
+            <h2 class="text-center mb-5 display-4">Comentarios</h2>
+            <p class="lead mb-5 text-center">
+                ལོ་རེམ་ཨིཔ་སུམ་ཌོ་ལོར་སིཊ་ཨ་མེཊ་ཀོན་སེ་ཀྲེ་ཊར་ཨ་ཌི་པི་སི་སི་ཀིང་ཨེ་ལིཊ།
+                ཀོའོ་སི་ཝེ་ནིཡམ་ཨ་ཀུ་ས་མཱསི་ཨ་ལི་ཡས་ཨ་སུ་མན་ཌ་ཌོ་ལོ་རེམ་རེ་པུ་ཌི་ཡན་ཌེ་ཝོ་ལུཔ་ཊ་ཊེམ་ཀུའི་སི་ཀུཝམ།
+                བཟོ་རིགས་ག་ར་གིས་
+                གནས་སྐབས་ཅིག་གི་རྗེས་སུ་འབྲངས་ཏེ་ ཉུང་ཤོས་ཅིག་ལས་བརྒལ་མེདཔ་སྦེ་ཨིན་མས།</p>
+        </div>
+
+    </section>
+
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
