Se terminó los acordeones de coments y las cards

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 
     <!--Comentarios-->
-    <section id="Comentarios" class="py-5 bg-light">
+    <section id="comentarios" class="py-5 bg-light">
         <div class="container">
             <div class="text-center py-5 h1">
                 <i class="bi bi-body-text"></i>
@@ -171,10 +171,161 @@
                 ལོ་རེམ་ཨིཔ་སུམ་ཌོ་ལོར་སིཊ་ཨ་མེཊ་ཀོན་སེ་ཀྲེ་ཊར་ཨ་ཌི་པི་སི་སི་ཀིང་ཨེ་ལིཊ།
                 ཀོའོ་སི་ཝེ་ནིཡམ་ཨ་ཀུ་ས་མཱསི་ཨ་ལི་ཡས་ཨ་སུ་མན་ཌ་ཌོ་ལོ་རེམ་རེ་པུ་ཌི་ཡན་ཌེ་ཝོ་ལུཔ་ཊ་ཊེམ་ཀུའི་སི་ཀུཝམ།
                 བཟོ་རིགས་ག་ར་གིས་
-                གནས་སྐབས་ཅིག་གི་རྗེས་སུ་འབྲངས་ཏེ་ ཉུང་ཤོས་ཅིག་ལས་བརྒལ་མེདཔ་སྦེ་ཨིན་མས།</p>
+                གནས་སྐབས་ཅིག་གི་རྗེས་སུ་འབྲངས་ཏེ་ ཉུང་ཤོས་ཅིག་ལས་བརྒལ་མེདཔ་སྦེ་ཨིན་མས།
+            </p>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-5 mb-md-0">
+                    <img src="assets/camara 600 x 800.png" class="img-fluid rounded" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-8 col-xl-9">
+                    <div class="accordion" id="accordionaExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Accordion Item #1
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the first item’s accordion body.</strong> It is shown by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It’s also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Акардэон, прадмет № 2
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the second item’s accordion body.</strong> ⵜⴰⴳⵉ ⴷ ⵜⴰⴼⴻⴽⴽⴰ ⵏ ⵜⵎⴻⵥⵥⵓⵖⵜ
+                                    ⵏ ⵜⵖⴰⵡⵙⴰ ⵜⵉⵙ ⵙⵏⴰⵜ.</strong> Yeffer ⵙ ⵜⵖⴰⵡⵍⴰ, ⴰⵍⴰⵎⵎⴰ ⴷ ⴰⵙⵎⵉ ⴰⵔⴰ ⵢⴻⵔⵏⵓ ⵓⵙⵎⴻⵍ ⵏ ⵓⵙⵎⴻⵍ ⵏ
+                                    ⵜⵖⴰⵡⵙⵉⵡⵉⵏ ⵉⵡⴰⵜⴰⵏ ⵉ ⵏⴻⵙⵙⴻⵅⴷⴰⵎ ⴰⴽⴽⴻⵏ ⴰⴷ ⵏⴻⵙⵙⴻⵎⵔⴻⵙ ⵢⴰⵍ ⴰⴼⴻⵔⴷⵉⵙ. ⵜⵉⵖⴻⵔⵎⵉⵡⵉⵏⴰ ⵜⵜⴹⴰⴼⴰⵔⴻⵏⵜ
+                                    ⴰⵥⴰⵔ ⴰⵎⴰⵜⵓ, ⴰⵎ ⵡⴰⴽⴽⴻⵏ ⴷⴰⵖⴻⵏ ⵜⵜⴹⴰⴼⴰⵔⴻⵏⵜ ⴰⵙⴻⴽⵍⴻⵙ ⴷ ⵓⴼⴼⴻⵔ ⵙ ⵜⵎⵓⵖⵍⵉⵡⵉⵏ ⵏ CSS. ⵜⵣⴻⵎⵔⴻⴹ ⴰⴷ
+                                    ⵜⴱⴻⴷⴷⴻⵍⴻⴹ ⴽⵔⴰ ⵙⴻⴳ ⵡⴰⵢⴰ ⵙ CSS ⵏ ⵓⵙⵎⴻⵍ ⵏⴻⵖ ⵙ ⵓⵙⴱⴻⴷⴷⵉ ⵏ ⵢⵉⵎⵓⵜⵜⵉⵢⴻⵏⵏⵏⴻⵖ ⵏ ⵜⵎⴻⵥⴷⵉⵜ. ⵉⵍⴰⵇ
+                                    ⴷⴰⵖⴻⵏ ⴰⴷ ⴷⵏⴻⵙⵎⴻⴽⵜⵉ ⴱⴻⵍⵍⵉ ⵇⵔⵉⴱ ⵢⴰⵍ HTML ⵢⴻⵣⵎⴻⵔ ⴰⴷ ⵢⴻⴽⵛⴻⵎ ⴷⴰⵅⴻⵍ ⵏ
+                                    <code>.accordionbody</code>, ⵖⴰⵙ ⴰⴽⴽⴻⵏ ⴰⴱⴻⴷⴷⴻⵍⵏⵏⵉ ⵢⴻⵜⵜⵃⴻⵜⵜⵉⵎ ⴰⵙⴻⵏⵇⴻⵙ ⵏ ⵜⵖⴰⵡⵙⵉⵡⵉⵏ.
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    اکارڈین ءِ چیز #3
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the third item’s accordion body.</strong> اے ڈیفالٹ ءِ رد ءَ پوشیدہ
+                                    اِنت، داں کہ ھلاس بوھگ ءِ پلگ ان ھما ھما کلاساں ھوار کنت کہ ما ھر عنصر ءِ سٹائل ءِ
+                                    ھاترا کارمرز کنیں۔ اے کلاس کلیں دروشم ءَ کنٹرول کن اَنت ءُ ھمے رنگ ءَ سی ایس ایس ءِ
+                                    ٹرانزیشن ءِ وسیلہ ءَ پیشدارگ ءُ پوشگ ءَ ھم کنٹرول کن اَنت۔ تئو اے چیزاں شہ ہر یکے ئا
+                                    گوں وثی سی ایس ایس ئا بدل کنئے یا مئے ڈیفالٹ متغیراں اوور رائڈ کنئے۔ اے گپ ھم زانگ
+                                    لوٹ اِیت کہ بس ھرچ HTML .accordion-body ءِ تہ ءَ شُت کنت، اگاں کہ ٹرانزیشن ءِ تہ ءَ
+                                    اوور فلو ءِ حد ءُ سیمسر ھست۔
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </section>
+
+    <!--Suscribete-->
+    <section id="suscribete" class="bg-secondary text-white text-light">
+        <div class="container">
+            <div class="text-center h1 py-5">
+                <i class="bi bi-fast-forward"></i>
+                <i class="bi bi-fast-forward"></i>
+                <i class="bi bi-fast-forward"></i>
+            </div>
+            <h2 class="text-center mb-5 display-4">Suscribete</h2>
+            <p class="lead text-center mb-5 pb-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 더욱이, 거부의 잘못으로 눈이 멀어 바로 그 사물들을 부인하지 않는 한, 힘든 일은
+                우리 존재 자체가 위대한 이유는 몸 자체가 시간이기 때문이 아닌가? 사랑이 도망치는 오류는 무엇인가!
+            </p>
+            <div class="row">
+                <div class="col-12 col-md-4 mb-5">
+                    <div class="card text-center text-dark">
+                        <div class="card-body">
+                            <h2 class="my-5"> $100</h2>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">An item</li>
+                            <li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li>
+                            <li class="list-group-item">A fourth item</li>
+                            <li class="list-group-item">And a fifth one</li>
+                        </ul>
+                        <div class="card-body">
+                            <button btn btn-outline-dark>
+                                Suscribete
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-4 mb-5">
+                    <div class="card text-center text-dark">
+                        <div class="card-body">
+                            <h2 class="my-5"> $500</h2>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">An item</li>
+                            <li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li>
+                            <li class="list-group-item">A fourth item</li>
+                            <li class="list-group-item">And a fifth one</li>
+                        </ul>
+                        <div class="card-body">
+                            <button btn btn-outline-dark>
+                                Suscribete
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-4 mb-5">
+                    <div class="card text-center text-dark">
+                        <div class="card-body">
+                            <h2 class="my-5"> $900</h2>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">An item</li>
+                            <li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li>
+                            <li class="list-group-item">A fourth item</li>
+                            <li class="list-group-item">And a fifth one</li>
+                        </ul>
+                        <div class="card-body">
+                            <button btn btn-outline-dark>
+                                Suscribete
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 
 
     <!-- Optional JavaScript; choose one of the two! -->
